--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
 		"STICKER_PACKNAME": {
 			"description": "sticker pack info",
 			"required": true,
-			"value": "❤️,LyFE"
+			"value": "❤️,friday-bot"
 		},
 		"HEROKU_APP_NAME": {
 			"description": "Heroku app name, same as above entered",
